--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
 	width : 25px
 }
 
+.img-karir {
+	width: 100% !important;
+}
+
 .img-logo {
 	width : 200px;
 	max-height : 30px;
@@ -70,6 +74,13 @@
   height: 100px;
 	margin-left: 20px;
 	margin-right: 20px;
+}
+
+html {
+	width: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 body {
