--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -553,7 +553,7 @@ h5.w3pvt-title {
 /* home grid */
 .home-grid {
 	padding: 2em 1em 1.2em;
-	border: 1px solid #d4cfcf;
+	/* border: 1px solid #d4cfcf; */
 }
 
 .pagecutom-grid {
